--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,7 +8,7 @@ jobs:
   generate-uml:
     runs-on: ubuntu-latest
     steps:
-      - uses: pollyannagogolook/AutoUmlDrawer@v1.0.0
+      - uses: pollyannagogolook/AutoUmlDrawer@v1.0.1
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
-          openai-api-key: ${{ secrets.OPENAI_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
